--- a/MySafariTNG/Base.lproj/Main.storyboard
+++ b/MySafariTNG/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -37,21 +37,32 @@
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dZM-KZ-PsX">
-                                <rect key="frame" x="11" y="486" width="46" height="30"/>
+                                <rect key="frame" x="0.0" y="486" width="46" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
                                     <action selector="onBackButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vqu-Wz-5mN"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8BH-92-ddn">
-                                <rect key="frame" x="65" y="486" width="46" height="30"/>
+                                <rect key="frame" x="54" y="486" width="57" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Forward"/>
                                 <connections>
                                     <action selector="onForwardButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="esq-4n-Iom"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QVi-fI-rx9">
+                                <rect key="frame" x="173" y="486" width="47" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="Reload"/>
+                                <connections>
+                                    <action selector="onReloadButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eNs-Z9-ahL"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Wx-6Q-Zex">
-                                <rect key="frame" x="112" y="486" width="46" height="30"/>
+                                <rect key="frame" x="114" y="486" width="46" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Stop"/>
                                 <connections>
                                     <action selector="onStopLoadingButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="H8Z-ls-1XQ"/>
@@ -63,6 +74,7 @@
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="backButton" destination="dZM-KZ-PsX" id="hgv-Ic-lm1"/>
                         <outlet property="spinner" destination="ytO-eu-yFA" id="vZK-Vx-hcD"/>
                         <outlet property="urlTextField" destination="D1y-OL-BCc" id="uiY-gz-sTw"/>
                         <outlet property="variableWebView" destination="T0g-fM-tMS" id="Mhe-TD-6ip"/>
