--- a/MySafariTNG/Base.lproj/Main.storyboard
+++ b/MySafariTNG/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -68,6 +68,13 @@
                                     <action selector="onStopLoadingButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="H8Z-ls-1XQ"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gce-mL-blH">
+                                <rect key="frame" x="217" y="486" width="46" height="30"/>
+                                <state key="normal" title="+"/>
+                                <connections>
+                                    <action selector="comingSoon:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pzN-HU-8Vc"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -75,6 +82,8 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="backButton" destination="dZM-KZ-PsX" id="hgv-Ic-lm1"/>
+                        <outlet property="comingSoonButton" destination="Gce-mL-blH" id="C8E-VT-DNK"/>
+                        <outlet property="forwardButton" destination="8BH-92-ddn" id="sZ5-mL-V7R"/>
                         <outlet property="spinner" destination="ytO-eu-yFA" id="vZK-Vx-hcD"/>
                         <outlet property="urlTextField" destination="D1y-OL-BCc" id="uiY-gz-sTw"/>
                         <outlet property="variableWebView" destination="T0g-fM-tMS" id="Mhe-TD-6ip"/>
